--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,7 @@ body {
   padding: 0;
   text-align: center;
   width: 50px;
+  cursor: pointer;
 }
 
 .board-row:after {
@@ -90,4 +91,21 @@ body {
 
 .game-info {
   margin-left: 20px;
+}
+.game-info ol > *{
+  margin-block: .5rem;
+  color: #bbb;
+}
+.game-info button{
+  background: #222;
+  border: 1px solid #eee;
+  color: #bbb;
+  padding: .5rem;
+  transition: all ease-in-out .3s;
+  cursor: pointer;
+}
+.game-info button:hover, 
+.game-info button:active
+{
+  background: #111;
 }
