--- a/src/styles.css
+++ b/src/styles.css
@@ -1,65 +1,13 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 22px;
-}
-
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
-
-h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
-
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
-
-code {
-  font-size: 1.2em;
-}
-
-ul {
-  padding-inline-start: 20px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
   margin: 20px;
   padding: 0;
   background: #222;
 }
 .list{
   width: 150px;
+  display: flex;
+  flex-wrap: wrap;
 }
-
 .square {
   background: transparent;
   border: 1px solid #eee;
@@ -68,16 +16,11 @@ body {
   font-weight: bold;
   line-height: 34px;
   height: 50px;
-  margin-right: -1px;
-  margin-top: -4px;
+  width: 50px;
   padding: 0;
   text-align: center;
-  width: 50px;
   cursor: pointer;
 }
-
-
-
 .status {
   margin-bottom: 10px;
   color: #bbb;
@@ -86,7 +29,6 @@ body {
   display: flex;
   flex-direction: row;
 }
-
 .game-info {
   margin-left: 20px;
 }
@@ -101,7 +43,6 @@ body {
   padding: .5rem;
   transition: all ease-in-out .3s;
   cursor: pointer;
-
 }
 .game-info button:hover, 
 .game-info button:active
