--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,10 @@ body {
 .game-info {
   margin-left: 20px;
 }
+.game-info ol{
+  display: flex;
+    flex-direction: column;
+}
 .game-info ol > *{
   margin-block: .5rem;
   color: #bbb;
