--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,49 @@
+:root{
+  --view-ration: 1rem;
+}
 body {
-  margin: 20px;
-  padding: 0;
+  display: flex;
   background: #222;
+  padding: 0;
+  margin: 0;
+  block-size: 100svh;
+  inline-size: 100%;
+}
+#root{
+  inline-size: 100%;
+  block-size: 100%;
 }
 ul{
   list-style: none;
 }
+.game {
+  display: flex;
+  flex-direction: row;
+  inline-size: 100%;
+  block-size: 100%;
+}
+.game-board {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  block-size: 100%;
+}
 .list{
-  width: 150px;
+  inline-size: calc(30 * var(--view-ration));
+  block-size: calc(30 * var(--view-ration));
   display: flex;
   flex-wrap: wrap;
 }
 .square {
-  background: transparent;
+  background-color: transparent;
   border: 1px solid #eee;
   color: #bbb;
-  font-size: 24px;
+  font-size: calc(1 * var(--view-ration));
   font-weight: bold;
-  line-height: 34px;
-  height: 50px;
-  width: 50px;
+  inline-size: 33%;
+  block-size: 33%;;
   padding: 0;
   text-align: center;
   cursor: pointer;
@@ -31,10 +55,7 @@ ul{
   margin-bottom: 10px;
   color: #bbb;
 }
-.game {
-  display: flex;
-  flex-direction: row;
-}
+
 .game-info {
   margin-left: 20px;
 }
