--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 :root{
-  --view-ration: 1rem;
+  --view-ratio: 1rem;
+
 }
 body {
   display: flex;
-  background: #222;
+  background: #000000;
   padding: 0;
   margin: 0;
   block-size: 100svh;
@@ -15,6 +16,7 @@ body {
 }
 ul{
   list-style: none;
+  padding: 0;
 }
 .game {
   display: flex;
@@ -29,19 +31,20 @@ ul{
   align-items: center;
   justify-content: center;
   block-size: 100%;
+  gap: 2rem;
 }
-.list{
-  inline-size: calc(30 * var(--view-ration));
-  block-size: calc(30 * var(--view-ration));
+.game-board .list{
+  inline-size: calc(30 * var(--view-ratio));
+  block-size: calc(30 * var(--view-ratio));
   display: flex;
   flex-wrap: wrap;
   position: relative;
 }
-.square {
+.game-board .square {
   background-color: transparent;
   border: none;
   color: #bbb;
-  font-size: calc(1 * var(--view-ration));
+  font-size: calc(1 * var(--view-ratio));
   font-weight: bold;
   inline-size: 33.333%;
   block-size: 33.333%;;
@@ -49,63 +52,70 @@ ul{
   text-align: center;
   cursor: pointer;
 }
-svg.dashed {
+.game-board .dashed {
   position: absolute;
   z-index: -1;
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
 }
-svg.dashed:nth-of-type(1) {
+svg.line {
+  position: absolute;
+  z-index: -1;
+  block-size: 100%;
+}
+svg.line:nth-of-type(1) {
   inset-inline-start: 33%;
   inset-block-start: 0;
 }
-svg.dashed:nth-of-type(2){
+svg.line:nth-of-type(2){
   inset-inline-start: 66.66%;
   inset-block-start: 0;
 }
-svg.dashed:nth-of-type(3){
+svg.line:nth-of-type(3){
   inset-inline-start: 0;
   inset-block-start: 33%;
   rotate: 0 0 1 90deg;
 }
-svg.dashed:nth-of-type(4){
+svg.line:nth-of-type(4){
   inset-inline-start: 0;
   inset-block-start: 66.66%;
   rotate: 0 0 1 90deg;
 }
-
-
-
-
-
-.square.win{
-  background: #003100;
-}
-.status {
-  margin-bottom: 10px;
-  color: #bbb;
-}
-
 .game-info {
-  margin-left: 20px;
+  padding: 2rem;
 }
 .game-info ul{
   display: flex;
   flex-direction: column;
 }
-.game-info ol > *{
-  margin-block: .5rem;
-  color: #bbb;
-}
 .game-info button{
-  border: 1px solid #11111150;
-  background: #222;
+  border: none;
+  border-bottom: 1px solid #eee;
+  background: transparent;
   color: #bbb;
   padding: .5rem;
   transition: all ease-in-out .3s;
   cursor: pointer;
-  border-radius: 5px;
   margin-block-end: .5rem;
+}
+.game-info .description {
+  display: flex;
+  align-items: center;
+}
+.game-info .description .move{
+  color:#555;
+  margin-inline-end: 1rem;
+}
+.game-info .description .player {
+  margin-inline-end: 5rem;
+  font-weight: 900;
+}
+.game-info .description .square{
+  font-weight: 100;
+  font-size: 0.7rem;
+}
+.game-info .description .square strong{
+  font-weight: 500;
 }
 .game-info button:hover, 
 .game-info button:active
@@ -114,4 +124,12 @@ svg.dashed:nth-of-type(4){
 }
 .game-info button.current{
   background: #111;
+}
+
+.square.win{
+  background: #003100;
+}
+.status {
+  margin-bottom: 10px;
+  color: #bbb;
 }
