--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,15 @@
+@font-face {
+  font-family: "sorreda";
+  src: url(./fonts/SorredaPro.ttf) format("truetype");
+}
+@font-face {
+  font-family: "nutellaBold";
+  src: url(./fonts/nutellaBold.ttf) format("truetype");
+}
 :root{
   --view-ratio: 1rem;
-
+  --secondary-font: "sorreda", serif;
+  --fancy-font: "nutellaBold", serif;
 }
 body {
   display: flex;
@@ -9,6 +18,7 @@ body {
   margin: 0;
   block-size: 100svh;
   inline-size: 100%;
+  font-family: var(--fancy-font);
 }
 #root{
   inline-size: 100%;
@@ -90,7 +100,7 @@ svg.line:nth-of-type(4){
 }
 .game-info button{
   border: none;
-  border-bottom: 1px solid #eee;
+  border-bottom: .1rem solid #999;
   background: transparent;
   color: #bbb;
   padding: .5rem;
@@ -102,9 +112,11 @@ svg.line:nth-of-type(4){
   display: flex;
   align-items: center;
 }
-.game-info .description .move{
-  color:#555;
+.game-info .description .move {
+  color: #555;
   margin-inline-end: 1rem;
+  font-family: var(--secondary-font);
+  inline-size: 1rem;
 }
 .game-info .description .player {
   margin-inline-end: 5rem;
@@ -113,6 +125,7 @@ svg.line:nth-of-type(4){
 .game-info .description .square{
   font-weight: 100;
   font-size: 0.7rem;
+  font-family: var(--fancy-font);
 }
 .game-info .description .square strong{
   font-weight: 500;
@@ -125,7 +138,6 @@ svg.line:nth-of-type(4){
 .game-info button.current{
   background: #111;
 }
-
 .square.win{
   background: #003100;
 }
