--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "sorreda";
-  src: url(./fonts/SorredaPro.ttf) format("truetype");
+  src: url(../fonts/SorredaPro.ttf) format("truetype");
 }
 @font-face {
   font-family: "nutellaBold";
-  src: url(./fonts/nutellaBold.ttf) format("truetype");
+  src: url(../fonts/nutellaBold.ttf) format("truetype");
 }
 :root{
   --view-ratio: 1rem;
