--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -171,3 +171,39 @@ svg.line:nth-of-type(4){
   font-size: 2rem;
   color: var(--primary-color);
 }
+.settings-icon{
+  inline-size: 3rem;
+  display: block;
+  position: fixed;
+  inset-block-end: 2rem;
+  inset-inline-end: 2rem;
+  cursor: pointer;
+}
+.settings-icon .inner{
+  fill: var(--grey);
+}
+.settings-icon .outer{
+  fill: var(--primary-color);
+}
+
+
+.popup-content {
+  margin: auto;
+  background: rgb(255, 255, 255);
+  width: 50%;
+  padding: 5px;
+}
+.popup-arrow {
+  color: rgb(255, 255, 255);
+}
+[role='tooltip'].popup-content {
+  width: 200px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 3px;
+}
+
+.popup-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+[data-popup='tooltip'].popup-overlay {
+  background: red;
+}
