--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -205,6 +205,7 @@ svg.line:nth-of-type(4){
 .modal .modal-title .close{
   inline-size: 1.5rem;
   display: block;
+  cursor: pointer;
 }
 .modal .modal-title .close svg{
   fill: var(--primary-color);
