add border radius to game info option buttons

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -119,6 +119,7 @@ svg.line:nth-of-type(4){
   padding: .5rem;
   font-weight: 900;
   font-size: 1.1rem;
+  border-radius: .25rem;
 }
 .game-info ul{
   display: flex;
