update X O Font and Size

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @font-face {
   font-family: "sorreda";
   src: url(../fonts/SorredaPro.ttf) format("truetype");
@@ -69,10 +70,13 @@ button{
   inline-size: calc(8 * var(--view-ratio));
   block-size: calc(8 * var(--view-ratio));
   padding: 0;
-  text-align: center;
-  font-size: 3rem;
+  font-size: 8rem;
   margin: 1rem;
-  border-radius: 1rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .game-board .dashed {
   position: absolute;
@@ -165,7 +169,7 @@ svg.line:nth-of-type(4){
   color: var(--black);
 }
 .game-info button.current{
-  background: #222;
+  background: #060606;
   color: var(--primary-color);
 }
 .status {
