--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -78,6 +78,19 @@ button{
   align-items: center;
   justify-content: center;
 }
+.game-board .square span{
+  opacity: 0;
+  transition: all ease-in-out .5s;
+  animation: animate-square .5s ease-in-out forwards;
+}
+@keyframes animate-square {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
 .game-board .dashed {
   position: absolute;
   z-index: -1;
