--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -135,9 +135,17 @@ svg.line:nth-of-type(4){
 .game-info .options button {
   border: none;
   padding: .5rem;
-  font-weight: 900;
-  font-size: 1.1rem;
   border-radius: .25rem;
+}
+.game-info .options button img {
+  inline-size: 1.5rem;
+  transition: all ease-in-out .3s;
+}
+.game-info .options button img.asc {
+  rotate: 0 0 1 180deg;
+}
+.game-info .options button:hover img {
+  rotate: 0 0 1 360deg;
 }
 .game-info ul{
   display: flex;
