--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -206,6 +206,12 @@ svg.line:nth-of-type(4){
   inset-inline-end: 2rem;
   cursor: pointer;
 }
+.settings-icon svg{
+  transition: all ease-in-out .5s;
+}
+.settings-icon:hover svg{
+  rotate: 0 0 1 360deg;
+}
 .settings-icon .inner{
   fill: var(--grey);
 }
