--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -198,6 +198,21 @@ svg.line:nth-of-type(4){
   font-size: 2rem;
   color: var(--primary-color);
 }
+.results {
+  display: flex;
+  gap: 3rem;
+}
+.results .result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+  gap: 1rem;
+}
+.results .result .value{
+  font-weight: 900;
+  font-family: var(--secondary-font);
+}
 .settings-icon {
   inline-size: 2.5rem;
   display: block;
