--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -8,7 +8,6 @@
   src: url(../fonts/nutellaBold.ttf) format("truetype");
 }
 :root{
-  --view-ratio: 1rem;
   --primary-font: "nutellaBold", serif;
   --secondary-font: "sorreda", serif;
   --primary-color: #dcb288;
@@ -57,20 +56,19 @@ button{
   block-size: 100%;
   gap: 2rem;
 }
-.game-board .list{
-  inline-size: calc(30 * var(--view-ratio));
-  block-size: calc(30 * var(--view-ratio));
+.game-board .list {
+  inline-size: 21rem;
+  block-size: 21rem;
   display: flex;
   flex-wrap: wrap;
   position: relative;
 }
 .game-board .square {
-  font-size: calc(1 * var(--view-ratio));
   font-weight: bold;
-  inline-size: calc(8 * var(--view-ratio));
-  block-size: calc(8 * var(--view-ratio));
+  inline-size: 5rem;
+  block-size: 5rem;
   padding: 0;
-  font-size: 8rem;
+  font-size: 5rem;
   margin: 1rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
@@ -212,6 +210,9 @@ svg.line:nth-of-type(4){
 .results .result .value{
   font-weight: 900;
   font-family: var(--secondary-font);
+}
+.confetti{
+  inline-size: 100%;
 }
 .settings-icon {
   inline-size: 2.5rem;
